<resources>
    <string name="app_name">Blockly LMC</string>
<!--  작업자 : 20181619 박종흠  -->
    <string name="label_register">Registers</string>
    <string name="lmc_step_desc">Step Code</string>
    <string name="lmc_reset_desc">Reset Emulator</string>
    <string name="label_memory_address">Memory Address</string>
    <string name="lmc_pager_prev"><![CDATA[<]]></string>
    <string name="lmc_pager_next"><![CDATA[>]]></string>
    <string-array name="lmc_pager">
        <item>0</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
    </string-array>
    <string name="dialog_result_success">Success</string>
    <string name="dialog_result_failed">Failed</string>
<!--  작업자 : 20181619 박종흠  -->


<!--  작업자 : 20181617 박정현 -->
    <string name="license"><u>오픈소스 라이센스</u></string>

    <string name="tutorial_mainmenu_introduce">Blockly-LMC 소개</string>
    <string name="tutorial_mainmenu_challenge">도전문제를 풀어보며 유저들과 경쟁하는 모드입니다.</string>
    <string name="tutorial_mainmenu_practice">원하는 프로그램을 자유롭게 작성해보는 모드입니다.</string>

    <string name="tutorial_blockly_introduce">블록코딩화면 소개</string>
    <string name="tutorial_blockly_run">이 버튼을 눌러 작성한 프로그램을 실행할 수 있습니다.</string>
    <string name="tutorial_blockly_submit">이 버튼을 눌러 작성한 프로그램을 채점해볼 수 있습니다.</string>
    <string name="tutorial_blockly_submit_practice">이 버튼을 눌러 작성한 프로그램을 채점해볼 수 있습니다. 연습모드에서는 동작하지 않습니다.</string>
    <string name="tutorial_blockly_help">블럭 도움말 소개</string>
    <string name="tutorial_blockly_fab">이 버튼을 눌러 문제를 볼 수 있습니다.</string>

    <string name="tutorial_emulator_register">레지스터 값이 표시됩니다.</string>
    <string name="tutorial_emulator_cycle">사이클이 표시됩니다. 사이클이 작은 프로그램이 빠른 수행시간을 갖습니다.</string>
    <string name="tutorial_emulator_memory">메모리 화면입니다.</string>
    <string name="tutorial_emulator_step">이 버튼으로 한 스텝씩 실행해볼 수 있습니다.</string>
    <string name="tutorial_emulator_reset">이 버튼으로 초기 상태로 리셋할 수 있습니다.</string>


    <string name="tutorial_agree">확인</string>

    <string name="tutorial_mainmenu">tutorial_mainmenu</string>
    <string name="tutorial_blockly_challenge">tutorial_blockly_challenge</string>
    <string name="tutorial_blockly_practice">tutorial_blockly_practice</string>
    <string name="tutorial_emulator">tutorial_emulator</string>

    <!--  작업자 : 20181617 박정현  -->
</resources>
