<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_height="0dip"
        android:layout_width="fill_parent"
        android:layout_weight=".1"
        android:id="@+id/layout_relative1"
        android:background="@drawable/border">
        <Button
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:id="@+id/btn_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Back to the code"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/btn_back"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_height="0dip"
        android:layout_width="fill_parent"
        android:layout_weight=".9"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".EmulatorActivity">

            <TextView
                android:id="@+id/lmc_register_label"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/label_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <GridLayout
                android:id="@+id/lmc_register_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:columnCount="4"
                android:padding="4dp"
                android:rowCount="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lmc_register_label">

                <TextView
                    android:id="@+id/lmc_label_pc"
                    style="@style/RegisterLabel"
                    android:layout_columnWeight="1"
                    android:layout_width="0dp"
                    android:text="PC" />

                <TextView
                    android:id="@+id/lmc_pc"
                    style="@style/RegisterValue"
                    android:layout_columnWeight="1"
                    android:layout_width="0dp"
                    android:text="000" />

                <TextView
                    android:id="@+id/lmc_label_acc"
                    style="@style/RegisterLabel"
                    android:layout_columnWeight="1"
                    android:layout_width="0dp"
                    android:text="ACC" />

                <TextView
                    android:id="@+id/lmc_acc"
                    style="@style/RegisterValue"
                    android:layout_columnWeight="1"
                    android:layout_width="0dp"
                    android:text="000" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_columnSpan="4"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/lmc_label_ir"
                    style="@style/RegisterLabel"
                    android:layout_columnWeight="1"
                    android:layout_width="0dp"
                    android:text="IR" />

                <TextView
                    android:id="@+id/lmc_ir"
                    style="@style/RegisterValue"
                    android:layout_columnWeight="1"
                    android:layout_width="0dp"
                    android:text="000" />

                <TextView
                    android:id="@+id/lmc_label_psr"
                    style="@style/RegisterLabel"
                    android:layout_columnWeight="1"
                    android:layout_width="0dp"
                    android:text="PSR" />

                <TextView
                    android:id="@+id/lmc_psr"
                    style="@style/RegisterValue"
                    android:layout_columnWeight="1"
                    android:layout_width="0dp"
                    android:text="000" />
            </GridLayout>

            <View
                android:id="@+id/lmc_register_spacer"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="#64000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lmc_register_view" />

            <LinearLayout
                android:id="@+id/lmc_memory_pager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lmc_register_spacer">

                <TextView
                    android:id="@+id/lmc_label_memory_offset"
                    style="@style/LMC.TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_memory_address" />

                <Spinner
                    android:id="@+id/lmc_memory_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/lmc_pager" />

                <Button
                    android:id="@+id/lmc_memory_pager_prev"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lmc_pager_prev" />

                <Button
                    android:id="@+id/lmc_memory_pager_next"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lmc_pager_next" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:orientation="horizontal"
                android:id="@+id/lmc_control"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageButton
                    android:id="@+id/lmc_step"
                    style="@style/LMC.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/lmc_step_desc"
                    app:srcCompat="@drawable/ic_run" />

                <ImageButton
                    android:id="@+id/lmc_reset"
                    style="@style/LMC.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/lmc_reset_desc"
                    app:srcCompat="@drawable/ic_refresh" />
            </LinearLayout>

            <ScrollView
                android:id="@+id/lmc_list_scroll_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lmc_memory_pager"
                app:layout_constraintBottom_toTopOf="@id/lmc_control">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lmc_memory_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </ScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</LinearLayout>
